--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.2
+attrs==22.2.0
 autoflake==1.7.8
 black==22.12.0
 certifi==2022.12.7
@@ -6,6 +7,7 @@ cfgv==3.3.1
 charset-normalizer==2.1.1
 click==8.1.3
 distlib==0.3.6
+exceptiongroup==1.1.0
 fastapi==0.88.0
 filelock==3.8.2
 flake8==5.0.4
@@ -18,19 +20,23 @@ greenlet==2.0.1
 h11==0.14.0
 identify==2.5.11
 idna==3.4
+iniconfig==1.1.1
 isort==5.11.4
 mccabe==0.7.0
 mypy==0.991
 mypy-extensions==0.4.3
 nodeenv==1.7.0
+packaging==22.0
 pathspec==0.10.3
 pep8-naming==0.13.3
 platformdirs==2.6.0
+pluggy==1.0.0
 pre-commit==2.21.0
 psycopg2-binary==2.9.5
 pycodestyle==2.9.1
 pydantic==1.10.2
 pyflakes==2.5.0
+pytest==7.2.0
 PyYAML==6.0
 requests==2.28.1
 sniffio==1.3.0
