--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,45 @@
 anyio==3.6.2
-attrs==22.2.0
-autoflake==1.7.8
-black==22.12.0
+boto3==1.26.49
+botocore==1.29.49
 certifi==2022.12.7
+cffi==1.15.1
 cfgv==3.3.1
-charset-normalizer==2.1.1
-click==8.1.3
+charset-normalizer==3.0.1
+cryptography==39.0.0
+datafort-utils @ git+https://gitlab.datafort.ru/dev/datafort_utils.git@bc2457ce0999d59ac01da7edc595841918fafc82
 distlib==0.3.6
-exceptiongroup==1.1.0
-fastapi==0.88.0
-filelock==3.8.2
-flake8==5.0.4
-flake8-broken-line==0.6.0
-flake8-isort==6.0.0
-flake8-plugin-utils==1.3.2
-Flake8-pyproject==1.2.2
-flake8-return==1.2.0
+ecdsa==0.18.0
+fastapi==0.89.1
+filelock==3.9.0
+flake8==6.0.0
 greenlet==2.0.1
-h11==0.14.0
-identify==2.5.11
+identify==2.5.13
 idna==3.4
-iniconfig==1.1.1
-isort==5.11.4
+jmespath==1.0.1
 mccabe==0.7.0
 mypy==0.991
 mypy-extensions==0.4.3
 nodeenv==1.7.0
-packaging==22.0
-pathspec==0.10.3
-pep8-naming==0.13.3
-platformdirs==2.6.0
-pluggy==1.0.0
+platformdirs==2.6.2
 pre-commit==2.21.0
-psycopg2-binary==2.9.5
-pycodestyle==2.9.1
-pydantic==1.10.2
-pyflakes==2.5.0
-pytest==7.2.0
+pyasn1==0.4.8
+pycodestyle==2.10.0
+pycparser==2.21
+pydantic==1.10.4
+pyflakes==3.0.1
+PyJWT==2.6.0
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-jose==3.3.0
 PyYAML==6.0
-requests==2.28.1
+requests==2.28.2
+rsa==4.9
+s3transfer==0.6.0
+six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==1.4.45
-SQLAlchemy-Utils==0.39.0
+SQLAlchemy==1.4.46
 starlette==0.22.0
 tomli==2.0.1
-types-requests==2.28.11.7
-types-urllib3==1.26.25.4
 typing_extensions==4.4.0
-urllib3==1.26.13
-uvicorn==0.20.0
+urllib3==1.26.14
 virtualenv==20.17.1
